# pendulum-adaptive

./: README-derivation.md  README.md  main.py  pyproject.toml
run/: eval.py
src/: __init__.py  controller.py  pendulum.py
