[project]
name = "adaptive-pendulum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium==0.29.1",
    "moviepy>=2.1.2",
    "pygame>=2.6.1",
    "tyro>=0.9.19",
]


[tool.poetry]
packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
